Refactor project structure by removing unnecessary files and adding new dependencies. Updated .gitignore to include additional sensitive files and directories. Enhanced Firebase service with authentication and Firestore methods. Improved routing and components in the React app, including new pages for user registration and blockchain verification. Removed outdated test files and optimized existing components for better performance.

--- a/.gitignore
+++ b/.gitignore
@@ -35,5 +35,42 @@ firebase-debug.*.log*
 # Google Cloud
 .gcloud/
 *.log
+credentials.json
+service-account.json
+
+# ML Kit
+*.tflite
+*.pb
+*.h5
+mlkit_models/
+
+# Android
+*.apk
+*.aab
+android/app/build/
+android/build/
+
+# iOS
+ios/Pods/
+ios/build/
+*.xcworkspace
+*.xcuserdata
+
+# Blockchain
+*.pem
+*.key
+blockchain/keystore/
+
+# Security
+*.p12
+*.pfx
+*.crt
+*.key
+*.pem
+
+# Local development
+local/
+temp/
+cache/
 
 node_modules
