--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react-dom": "^18.2.0",
     "axios": "^1.4.0",
     "chart.js": "^4.3.0",
+    "csv-parse": "^5.6.0",
     "ethers": "^6.13.5",
     "firebase": "^10.0.0",
     "qrcode.react": "^3.1.0",
@@ -27,7 +28,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^3.0.1",
     "react-webcam": "^7.1.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
