--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
+    "@types/leaflet": "^1.9.16",
     "@types/node": "^16.18.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
@@ -23,10 +24,12 @@
     "csv-parse": "^5.6.0",
     "ethers": "^6.13.5",
     "firebase": "^10.0.0",
+    "leaflet": "^1.9.4",
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.14.0",
     "react-scripts": "^3.0.1",
     "react-webcam": "^7.1.0",
